<resources>
    <string name="app_name">DinoDine</string>
    <string name="book_table">Book Table</string>
    <string name="view_bookings">View Bookings</string>

    <string name="number_of_people">Number of People</string>
    <string name="done">done</string>

    <string name="select_a_time_for">Select a Time for</string>
    <string name="date_here">Date Here</string>
    <string name="start">Start</string>
    <string name="defaultTime">hh:mm pm</string>
    <string name="enter_details">Enter Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="finish">Finish</string>
    <string name="list_view">List View</string>
    <string name="table_view">Table View</string>

    <string-array name="titleName">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss</item>
        <item>Ms.</item>
    </string-array>

    <string-array name="diet">
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Gluten-Free</item>
        <item>Other</item>
    </string-array>

    <string-array name="ext">
        <item>+1</item>
        <item>+61</item>
    </string-array>


    <string-array name="peopleNum">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="peopleNum2">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="bookings">
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Table 4</item>
        <item>Table 5</item>
        <item>Table 6</item>
        <item>Table 7</item>
        <item>Table 8</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="number">Number</string>
    <string name="email2">Email</string>
</resources>
